--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "aos": "^2.3.4",
+    "click-outside-vue3": "^4.0.1",
     "pinia": "^2.0.11",
     "vue": "^3.2.31",
     "vue-i18n": "^9.2.0-beta.30",
